--- a/FrontChama/pages/tec_faq.html
+++ b/FrontChama/pages/tec_faq.html
@@ -1,95 +1,137 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Central de Chamados - Técnico</title>
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="tec_faq.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Central de Chamados - Técnico</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="tec_faq.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body>
-  <header class="site-header">
-    <div class="header-inner">
-      <div class="brand">
-        <div class="logo-wrapper">
-          <img src="assets/logo.png" alt="Logo Chama Fácil" class="brand-logo">
+    <header class="site-header">
+        <div class="header-inner">
+            <div class="brand">
+                <div class="logo-wrapper">
+                    <img src="assets/logo.png" alt="Logo Chama Fácil" class="brand-logo">
+                </div>
+                <span class="brand-title">Chama Fácil</span>
+            </div>
+
+            <nav class="main-nav" aria-label="Menu principal">
+                <a class="nav-link active" href="#">Central de Soluções - TÉCNICO</a>
+            </nav>
+
+            <div class="profile-area" title="Perfil">
+                <i class="fa-solid fa-user-circle"></i>
+            </div>
         </div>
-        <span class="brand-title">Chama Fácil</span>
-      </div>
+    </header>
 
-      <nav class="main-nav" aria-label="Menu principal">
-        <a class="nav-link active" href="#">Central de Soluções - TÉCNICO</a>
-      </nav>
+    <div class="layout">
+        <!-- SIDEBAR -->
+        <aside class="sidebar">
+            <ul>
+                <li><a href="atividades.html"><i class="fa-solid fa-list-check"></i> Minhas Atividades</a></li>
+                <li><a href="chamados.html"><i class="fa-solid fa-headset"></i> Chamados</a></li>
+                <li><a href="perfil.html"><i class="fa-solid fa-user"></i> Perfil</a></li>
+                <li><a href="login.html"><i class="fa-solid fa-clipboard-list"></i> Sair</a></li>
+            </ul>
+        </aside>
 
-      <div class="profile-area" title="Perfil">
-        <i class="fa-solid fa-user-circle"></i>
-      </div>
+        <main class="page">
+            <h1 class="hero-title"><i class="fa-solid fa-headset"></i> Central de Chamados</h1>
+
+            <!-- Status Cards -->
+            <div class="status-cards">
+                <button class="status-card active" data-status="pendente">
+                    <i class="fa-regular fa-clock"></i> Pendentes
+                    <span class="badge">0</span>
+                </button>
+                <button class="status-card" data-status="em-andamento">
+                    <i class="fa-solid fa-spinner"></i> Em andamento
+                    <span class="badge">0</span>
+                </button>
+                <button class="status-card" data-status="concluido">
+                    <i class="fa-solid fa-circle-check"></i> Concluídos
+                    <span class="badge">0</span>
+                </button>
+            </div>
+
+            <!-- Pesquisa -->
+            <div class="search-area">
+                <input type="search" id="searchInput" placeholder="Pesquisar por ID, categoria ou descrição..." />
+                <i class="fa-solid fa-magnifying-glass search-icon"></i>
+            </div>
+
+            <!-- Lista de Chamados -->
+            <div id="chamadosList" class="chamados-list"></div>
+        </main>
     </div>
-  </header>
 
-     <div class="layout">
-    <!-- SIDEBAR -->
-    <aside class="sidebar">
-      <ul>
-        <li><a href="atividades.html"><i class="fa-solid fa-list-check"></i> Minhas Atividades</a></li>
-        <li><a href="chamados.html"><i class="fa-solid fa-headset"></i> Chamados</a></li>
-        <li><a href="perfil.html"><i class="fa-solid fa-user"></i> Perfil</a></li>
-        <li><a href="login.html"><i class="fa-solid fa-clipboard-list"></i> Sair</a></li>
-      </ul>
-    </aside>
-
-    <main class="page">
-      <h1 class="hero-title"><i class="fa-solid fa-headset"></i> Central de Chamados</h1>
-
-      <!-- Status Cards -->
-      <div class="status-cards">
-        <button class="status-card active" data-status="pendente">
-          <i class="fa-regular fa-clock"></i> Pendentes 
-          <span class="badge">0</span>
-        </button>
-        <button class="status-card" data-status="em-andamento">
-          <i class="fa-solid fa-spinner"></i> Em andamento 
-          <span class="badge">0</span>
-        </button>
-        <button class="status-card" data-status="concluido">
-          <i class="fa-solid fa-circle-check"></i> Concluídos 
-          <span class="badge">0</span>
-        </button>
-      </div>
-
-      <!-- Pesquisa -->
-      <div class="search-area">
-        <input type="search" id="searchInput" placeholder="Pesquisar por ID, categoria ou descrição..." />
-        <i class="fa-solid fa-magnifying-glass search-icon"></i>
-      </div>
-
-      <!-- Lista de Chamados -->
-      <div id="chamadosList" class="chamados-list"></div>
-    </main>
-  </div>
-
-  <!-- Modal -->
-  <div class="modal" id="modalChamado">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h3 id="modalId"></h3>
-      <p><strong>Categoria:</strong> <span id="modalCategoria"></span></p>
-      <p><strong>Solicitante:</strong> <span id="modalUsuario"></span></p>
-      <p><strong>Status:</strong> <span id="modalStatus"></span></p>
-      <p><strong>Descrição:</strong> <span id="modalDescricao"></span></p>
-      <p><strong>Técnico responsável:</strong> <span id="modalTecnico"></span></p>
-      <textarea id="modalObservacao" placeholder="Adicione observações sobre o atendimento..."></textarea>
-      <button id="btnToggleStatus" class="btn-chamado"></button>
+    <!-- Modal -->
+    <div class="modal" id="modalChamado">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h3 id="modalId"></h3>
+            <p><strong>Categoria:</strong> <span id="modalCategoria"></span></p>
+            <p><strong>Solicitante:</strong> <span id="modalUsuario"></span></p>
+            <p><strong>Status:</strong> <span id="modalStatus"></span></p>
+            <p><strong>Descrição:</strong> <span id="modalDescricao"></span></p>
+            <p><strong>Técnico responsável:</strong> <span id="modalTecnico"></span></p>
+            <textarea id="modalObservacao" placeholder="Adicione observações sobre o atendimento..."></textarea>
+            <button id="btnToggleStatus" class="btn-chamado"></button>
+        </div>
     </div>
-  </div>
+
+    <!-- botão flutuante -->
+    <button id="chatToggle" class="fixed bottom-6 right-6 bg-[#3B82F6] text-white rounded-full w-14 h-14 flex items-center justify-center shadow-lg hover:bg-[#1E40AF] transition z-50">
+        💬
+    </button>
+
+    <!-- modal do chat -->
+    <div id="chatModal" class="hidden fixed bottom-20 right-6 w-[380px] max-w-[90%] bg-white rounded-2xl shadow-xl flex flex-col overflow-hidden border border-gray-200 z-50">
+        <!-- header -->
+        <header class="flex items-center justify-between bg-[#2F374C] text-white p-3">
+            <div class="flex items-center gap-3">
+                <img src="zedohelp.png" class="w-9 h-9 rounded-full bg-white p-1" alt="Zé Help">
+                <div>
+                    <h1 class="text-sm font-semibold leading-none">Zé Help</h1>
+                    <p class="text-xs opacity-80">Ajudante do Chama Fácil</p>
+                </div>
+            </div>
+            <button id="closeChat" class="text-lg font-bold hover:text-red-400 transition">×</button>
+        </header>
+
+        <!-- mensagens -->
+        <main id="chatBox" class="flex-1 p-3 overflow-y-auto bg-gray-50 space-y-3">
+            <div class="msg flex items-end gap-2">
+                <img src="zedohelp.png" class="w-7 h-7 rounded-full" alt="Zé Help">
+                <div class="bg-[#3B82F6] text-white px-3 py-2 rounded-2xl max-w-[75%] text-sm">
+                    Oi! Sou o Zé Help 😄 Como posso te ajudar hoje?
+                </div>
+            </div>
+        </main>
+
+        <!-- input -->
+        <div class="flex items-center gap-2 border-t border-gray-200 p-2 bg-white">
+            <input id="userInput" type="text" placeholder="Digite sua mensagem..."
+                   class="flex-1 border border-gray-300 rounded-full px-3 py-1.5 text-sm focus:outline-none focus:ring-2 focus:ring-[#3B82F6]">
+            <button id="sendBtn" class="bg-[#3B82F6] text-white px-4 py-1.5 rounded-full text-sm hover:bg-[#1E40AF] transition">Enviar</button>
+        </div>
+    </div>
 
 
-  <footer class="site-footer">
-    <div>© 2025 Chama Fácil — suporte: chamafacil@outlook.com</div>
-  </footer>
+    <footer class="site-footer">
+        <div>© 2025 Chama Fácil — suporte: chamafacil@outlook.com</div>
+    </footer>
 
-  <script src="tec_faq.js"></script>
+    <script src="tec_faq.js">
+
+    </script>
 </body>
 </html>
