--- a/FrontChama/pages/tec_perfil.html
+++ b/FrontChama/pages/tec_perfil.html
@@ -43,6 +43,11 @@
                 <li><i class="fa-solid fa-clipboard-list"></i> Solicitações</li>
                 <li><i class="fa-solid fa-headset"></i> Chamados</li>
                 <li class="active"><i class="fa-solid fa-user-gear"></i> Perfil</li>
+                <li>
+                    <a href="#" onclick="abrirModalSaida()">
+                        <i class="fa-solid fa-clipboard-list"></i> Sair
+                    </a>
+                </li>
             </ul>
         </aside>
 
@@ -88,7 +93,7 @@
         <!-- header -->
         <header class="flex items-center justify-between bg-[#2F374C] text-white p-3">
             <div class="flex items-center gap-3">
-                <img src="zedohelp.png" class="w-9 h-9 rounded-full bg-white p-1" alt="Zé Help">
+                <img src="assets/zehelp.png" class="w-9 h-9 rounded-full bg-white p-1" alt="Zé Help">
                 <div>
                     <h1 class="text-sm font-semibold leading-none">Zé Help</h1>
                     <p class="text-xs opacity-80">Ajudante do Chama Fácil</p>
@@ -100,7 +105,7 @@
         <!-- mensagens -->
         <main id="chatBox" class="flex-1 p-3 overflow-y-auto bg-gray-50 space-y-3">
             <div class="msg flex items-end gap-2">
-                <img src="zedohelp.png" class="w-7 h-7 rounded-full" alt="Zé Help">
+                <img src="assets/zehelp.png" class="w-7 h-7 rounded-full" alt="Zé Help">
                 <div class="bg-[#3B82F6] text-white px-3 py-2 rounded-2xl max-w-[75%] text-sm">
                     Oi! Sou o Zé Help 😄 Como posso te ajudar hoje?
                 </div>
@@ -115,6 +120,18 @@
         </div>
     </div>
 
+    <!-- MODAL DE CONFIRMAÇÃO DE SAÍDA -->
+    <div id="modalConfirm" class="modal">
+        <div class="modal-content text-center">
+            <h2 class="text-lg font-semibold mb-4 text-gray-800">Tem certeza que deseja sair?</h2>
+            <div class="flex justify-center gap-4">
+                <button id="btnConfirmarSair" class="bg-[var(--error)] text-white px-4 py-2 rounded-lg hover:bg-red-600 transition">Sair</button>
+                <button id="btnCancelarSair" class="bg-gray-200 text-gray-800 px-4 py-2 rounded-lg hover:bg-gray-300 transition">Cancelar</button>
+            </div>
+        </div>
+    </div>
+
+
     <footer class="site-footer">
         <div>© 2025 Chama Fácil — suporte: chamafacil@outlook.com</div>
     </footer>
@@ -127,6 +144,9 @@
         const chatBox = document.getElementById('chatBox');
         const userInput = document.getElementById('userInput');
         const sendBtn = document.getElementById('sendBtn');
+        const modalConfirm = document.getElementById('modalConfirm');
+        const btnConfirmarSair = document.getElementById('btnConfirmarSair');
+        const btnCancelarSair = document.getElementById('btnCancelarSair');
 
         form.addEventListener('submit', e => {
             e.preventDefault();
@@ -146,8 +166,8 @@
             msg.className = 'msg flex items-end gap-2';
             msg.innerHTML = sender === 'user'
                 ? `<div class='ml-auto bg-gray-200 text-gray-800 px-3 py-2 rounded-2xl max-w-[75%] text-sm'>${text}</div>`
-                : `<img src='zedohelp.png' class='w-7 h-7 rounded-full'>
-               <div class='bg-[#3B82F6] text-white px-3 py-2 rounded-2xl max-w-[75%] text-sm'>${text}</div>`;
+                : `<img src='assets/zehelp.png' class='w-7 h-7 rounded-full'>
+                   <div class='bg-[#3B82F6] text-white px-3 py-2 rounded-2xl max-w-[75%] text-sm'>${text}</div>`;
             chatBox.appendChild(msg);
             chatBox.scrollTop = chatBox.scrollHeight;
         }
@@ -157,8 +177,8 @@
             typingDiv.id = 'typingIndicator';
             typingDiv.className = 'msg flex items-end gap-2';
             typingDiv.innerHTML = `
-            <img src='zedohelp.png' class='w-7 h-7 rounded-full'>
-            <div class='bg-[#3B82F6] text-white px-3 py-2 rounded-2xl text-sm'>digitando...</div>`;
+                <img src='assets/zehelp.png' class='w-7 h-7 rounded-full'>
+                <div class='bg-[#3B82F6] text-white px-3 py-2 rounded-2xl text-sm'>digitando...</div>`;
             chatBox.appendChild(typingDiv);
             chatBox.scrollTop = chatBox.scrollHeight;
         }
@@ -204,6 +224,25 @@
 
         userInput.addEventListener('keypress', (e) => {
             if (e.key === 'Enter') sendBtn.click();
+        });
+
+        function abrirModalSaida() {
+            modalConfirm.style.display = 'flex';
+        }
+
+        function fecharModalSaida() {
+            modalConfirm.style.display = 'none';
+        }
+
+        btnConfirmarSair.addEventListener('click', () => {
+            window.location.href = 'home.html';
+        });
+
+        btnCancelarSair.addEventListener('click', fecharModalSaida);
+
+        // fecha se clicar fora do modal
+        window.addEventListener('click', (e) => {
+            if (e.target === modalConfirm) fecharModalSaida();
         });
     </script>
 
