--- a/FrontChama/pages/artigos.html
+++ b/FrontChama/pages/artigos.html
@@ -38,7 +38,11 @@
                 <li><a href="atividades.html"><i class="fa-solid fa-list-check"></i> Minhas Atividades</a></li>
                 <li><a href="chamados.html"><i class="fa-solid fa-headset"></i> Chamados</a></li>
                 <li><a href="perfil.html"><i class="fa-solid fa-user"></i> Perfil</a></li>
-                <li><a href="login.html"><i class="fa-solid fa-clipboard-list"></i> Sair</a></li>
+                <li>
+                    <a href="#" onclick="abrirModalSaida()">
+                        <i class="fa-solid fa-clipboard-list"></i> Sair
+                    </a>
+                </li>
             </ul>
         </aside>
 
@@ -102,7 +106,7 @@
         <!-- header -->
         <header class="flex items-center justify-between bg-[#2F374C] text-white p-3">
             <div class="flex items-center gap-3">
-                <img src="zedohelp.png" class="w-9 h-9 rounded-full bg-white p-1" alt="Zé Help">
+                <img src="assets/zehelp.png" class="w-9 h-9 rounded-full bg-white p-1" alt="Zé Help">
                 <div>
                     <h1 class="text-sm font-semibold leading-none">Zé Help</h1>
                     <p class="text-xs opacity-80">Ajudante do Chama Fácil</p>
@@ -114,7 +118,7 @@
         <!-- mensagens -->
         <main id="chatBox" class="flex-1 p-3 overflow-y-auto bg-gray-50 space-y-3">
             <div class="msg flex items-end gap-2">
-                <img src="zedohelp.png" class="w-7 h-7 rounded-full" alt="Zé Help">
+                <img src="assets/zehelp.png" class="w-7 h-7 rounded-full" alt="Zé Help">
                 <div class="bg-[#3B82F6] text-white px-3 py-2 rounded-2xl max-w-[75%] text-sm">
                     Oi! Sou o Zé Help 😄 Como posso te ajudar hoje?
                 </div>
@@ -129,6 +133,17 @@
         </div>
     </div>
 
+    <!-- MODAL DE CONFIRMAÇÃO DE SAÍDA -->
+    <div id="modalConfirm" class="modal">
+        <div class="modal-content text-center">
+            <h2 class="text-lg font-semibold mb-4 text-gray-800">Tem certeza que deseja sair?</h2>
+            <div class="flex justify-center gap-4">
+                <button id="btnConfirmarSair" class="bg-[var(--error)] text-white px-4 py-2 rounded-lg hover:bg-red-600 transition">Sair</button>
+                <button id="btnCancelarSair" class="bg-gray-200 text-gray-800 px-4 py-2 rounded-lg hover:bg-gray-300 transition">Cancelar</button>
+            </div>
+        </div>
+    </div>
+
 
     <!-- FOOTER -->
     <footer class="site-footer">
@@ -136,85 +151,107 @@
     </footer>
 
     <script>
-    const chatToggle = document.getElementById('chatToggle');
-    const chatModal = document.getElementById('chatModal');
-    const closeChat = document.getElementById('closeChat');
-    const chatBox = document.getElementById('chatBox');
-    const userInput = document.getElementById('userInput');
-    const sendBtn = document.getElementById('sendBtn');
+        const chatToggle = document.getElementById('chatToggle');
+        const chatModal = document.getElementById('chatModal');
+        const closeChat = document.getElementById('closeChat');
+        const chatBox = document.getElementById('chatBox');
+        const userInput = document.getElementById('userInput');
+        const sendBtn = document.getElementById('sendBtn');
+        const modalConfirm = document.getElementById('modalConfirm');
+        const btnConfirmarSair = document.getElementById('btnConfirmarSair');
+        const btnCancelarSair = document.getElementById('btnCancelarSair');
 
-    chatToggle.addEventListener('click', () => {
-        chatModal.classList.toggle('hidden');
-    });
+        chatToggle.addEventListener('click', () => {
+            chatModal.classList.toggle('hidden');
+        });
 
-    closeChat.addEventListener('click', () => {
-        chatModal.classList.add('hidden');
-    });
+        closeChat.addEventListener('click', () => {
+            chatModal.classList.add('hidden');
+        });
 
-    function addMessage(text, sender) {
-        const msg = document.createElement('div');
-        msg.className = 'msg flex items-end gap-2';
-        msg.innerHTML = sender === 'user'
-            ? `<div class='ml-auto bg-gray-200 text-gray-800 px-3 py-2 rounded-2xl max-w-[75%] text-sm'>${text}</div>`
-            : `<img src='zedohelp.png' class='w-7 h-7 rounded-full'>
-               <div class='bg-[#3B82F6] text-white px-3 py-2 rounded-2xl max-w-[75%] text-sm'>${text}</div>`;
-        chatBox.appendChild(msg);
-        chatBox.scrollTop = chatBox.scrollHeight;
-    }
+        function addMessage(text, sender) {
+            const msg = document.createElement('div');
+            msg.className = 'msg flex items-end gap-2';
+            msg.innerHTML = sender === 'user'
+                ? `<div class='ml-auto bg-gray-200 text-gray-800 px-3 py-2 rounded-2xl max-w-[75%] text-sm'>${text}</div>`
+                : `<img src='assets/zehelp.png' class='w-7 h-7 rounded-full'>
+                   <div class='bg-[#3B82F6] text-white px-3 py-2 rounded-2xl max-w-[75%] text-sm'>${text}</div>`;
+            chatBox.appendChild(msg);
+            chatBox.scrollTop = chatBox.scrollHeight;
+        }
 
-    function showTypingIndicator() {
-        const typingDiv = document.createElement('div');
-        typingDiv.id = 'typingIndicator';
-        typingDiv.className = 'msg flex items-end gap-2';
-        typingDiv.innerHTML = `
-            <img src='zedohelp.png' class='w-7 h-7 rounded-full'>
-            <div class='bg-[#3B82F6] text-white px-3 py-2 rounded-2xl text-sm'>digitando...</div>`;
-        chatBox.appendChild(typingDiv);
-        chatBox.scrollTop = chatBox.scrollHeight;
-    }
+        function showTypingIndicator() {
+            const typingDiv = document.createElement('div');
+            typingDiv.id = 'typingIndicator';
+            typingDiv.className = 'msg flex items-end gap-2';
+            typingDiv.innerHTML = `
+                <img src='assets/zehelp.png' class='w-7 h-7 rounded-full'>
+                <div class='bg-[#3B82F6] text-white px-3 py-2 rounded-2xl text-sm'>digitando...</div>`;
+            chatBox.appendChild(typingDiv);
+            chatBox.scrollTop = chatBox.scrollHeight;
+        }
 
-    function removeTypingIndicator() {
-        const typingDiv = document.getElementById('typingIndicator');
-        if (typingDiv) typingDiv.remove();
-    }
+        function removeTypingIndicator() {
+            const typingDiv = document.getElementById('typingIndicator');
+            if (typingDiv) typingDiv.remove();
+        }
 
-    sendBtn.addEventListener('click', () => {
-        const text = userInput.value.trim();
-        if (!text || sendBtn.disabled) return;
-        addMessage(text, 'user');
-        userInput.value = '';
-        sendBtn.disabled = true;
-        userInput.disabled = true;
+        sendBtn.addEventListener('click', () => {
+            const text = userInput.value.trim();
+            if (!text || sendBtn.disabled) return;
+            addMessage(text, 'user');
+            userInput.value = '';
+            sendBtn.disabled = true;
+            userInput.disabled = true;
 
-        showTypingIndicator();
+            showTypingIndicator();
 
-        fetch('https://localhost:7271/api/ia/chat', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({
-                message: text,
-                sessionId: 'usuario-chat'
+            fetch('https://localhost:7271/api/ia/chat', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({
+                    message: text,
+                    sessionId: 'usuario-chat'
+                })
             })
-        })
-            .then(res => res.json())
-            .then(data => {
-                removeTypingIndicator();
-                addMessage(data.response || 'Desculpe, não entendi sua mensagem.', 'bot');
-            })
-            .catch(() => {
-                removeTypingIndicator();
-                addMessage('Ops! Algo deu errado ao falar com o assistente. 😢', 'bot');
-            })
-            .finally(() => {
-                sendBtn.disabled = false;
-                userInput.disabled = false;
-                userInput.focus();
-            });
-    });
+                .then(res => res.json())
+                .then(data => {
+                    removeTypingIndicator();
+                    addMessage(data.response || 'Desculpe, não entendi sua mensagem.', 'bot');
+                })
+                .catch(() => {
+                    removeTypingIndicator();
+                    addMessage('Ops! Algo deu errado ao falar com o assistente. 😢', 'bot');
+                })
+                .finally(() => {
+                    sendBtn.disabled = false;
+                    userInput.disabled = false;
+                    userInput.focus();
+                });
+        });
 
-    userInput.addEventListener('keypress', (e) => {
-        if (e.key === 'Enter') sendBtn.click();
-    });
+        userInput.addEventListener('keypress', (e) => {
+            if (e.key === 'Enter') sendBtn.click();
+        });
+
+        function abrirModalSaida() {
+            modalConfirm.style.display = 'flex';
+        }
+
+        function fecharModalSaida() {
+            modalConfirm.style.display = 'none';
+        }
+
+        btnConfirmarSair.addEventListener('click', () => {
+            window.location.href = 'home.html';
+        });
+
+        btnCancelarSair.addEventListener('click', fecharModalSaida);
+
+        // fecha se clicar fora do modal
+        window.addEventListener('click', (e) => {
+            if (e.target === modalConfirm) fecharModalSaida();
+        });
     </script>
 
 </body>
