--- a/FrontChama/pages/tec_faq.html
+++ b/FrontChama/pages/tec_faq.html
@@ -39,7 +39,11 @@
                 <li><a href="atividades.html"><i class="fa-solid fa-list-check"></i> Minhas Atividades</a></li>
                 <li><a href="chamados.html"><i class="fa-solid fa-headset"></i> Chamados</a></li>
                 <li><a href="perfil.html"><i class="fa-solid fa-user"></i> Perfil</a></li>
-                <li><a href="login.html"><i class="fa-solid fa-clipboard-list"></i> Sair</a></li>
+                <li>
+                    <a href="#" id="btnSair">
+                        <i class="fa-solid fa-clipboard-list"></i> Sair
+                    </a>
+                </li>
             </ul>
         </aside>
 
@@ -98,7 +102,7 @@
         <!-- header -->
         <header class="flex items-center justify-between bg-[#2F374C] text-white p-3">
             <div class="flex items-center gap-3">
-                <img src="zedohelp.png" class="w-9 h-9 rounded-full bg-white p-1" alt="Zé Help">
+                <img src="assets/zehelp.png" class="w-9 h-9 rounded-full bg-white p-1" alt="Zé Help">
                 <div>
                     <h1 class="text-sm font-semibold leading-none">Zé Help</h1>
                     <p class="text-xs opacity-80">Ajudante do Chama Fácil</p>
@@ -110,7 +114,7 @@
         <!-- mensagens -->
         <main id="chatBox" class="flex-1 p-3 overflow-y-auto bg-gray-50 space-y-3">
             <div class="msg flex items-end gap-2">
-                <img src="zedohelp.png" class="w-7 h-7 rounded-full" alt="Zé Help">
+                <img src="assets/zehelp.png" class="w-7 h-7 rounded-full" alt="Zé Help">
                 <div class="bg-[#3B82F6] text-white px-3 py-2 rounded-2xl max-w-[75%] text-sm">
                     Oi! Sou o Zé Help 😄 Como posso te ajudar hoje?
                 </div>
@@ -125,6 +129,16 @@
         </div>
     </div>
 
+    <!-- MODAL DE CONFIRMAÇÃO DE SAÍDA -->
+    <div id="modalConfirm" class="modalSair">
+        <div class="modalSair-content text-center">
+            <h2 class="text-lg font-semibold mb-4 text-gray-800">Tem certeza que deseja sair?</h2>
+            <div class="flex justify-center gap-4">
+                <button id="btnConfirmarSair" class="bg-[var(--error)] text-white px-4 py-2 rounded-lg hover:bg-red-600 transition">Sair</button>
+                <button id="btnCancelarSair" class="bg-gray-200 text-gray-800 px-4 py-2 rounded-lg hover:bg-gray-300 transition">Cancelar</button>
+            </div>
+        </div>
+    </div>
 
     <footer class="site-footer">
         <div>© 2025 Chama Fácil — suporte: chamafacil@outlook.com</div>
