--- a/FrontChama/html/artigos.html
+++ b/FrontChama/html/artigos.html
@@ -66,42 +66,42 @@
                     <i class="fa-solid fa-file-code"></i>
                     <h3>Boas práticas de desenvolvimento</h3>
                     <p>Dicas e estratégias para manter o código limpo, legível e sustentável.</p>
-                    <a href="pdf/boas-praticas.pdf" class="btn-chamado" target="_blank" rel="noopener noreferrer">Ler artigo</a>
+                    <a href="../pdf/boas-praticas.pdf" class="btn-chamado" target="_blank" rel="noopener noreferrer">Ler artigo</a>
                 </div>
 
                 <div class="card">
                     <i class="fa-solid fa-lock"></i>
                     <h3>Guia de Segurança Digital</h3>
                     <p>Documentação essencial sobre como proteger dados e evitar ataques cibernéticos.</p>
-                    <a href="pdf/seguranca-digital.pdf" class="btn-chamado" target="_blank" rel="noopener noreferrer">Abrir documento</a>
+                    <a href="../pdf/seguranca.pdf" class="btn-chamado" target="_blank" rel="noopener noreferrer">Abrir documento</a>
                 </div>
 
                 <div class="card">
                     <i class="fa-solid fa-database"></i>
                     <h3>Banco de Dados — Conceitos e Otimização</h3>
                     <p>Aprenda sobre normalização, índices e consultas otimizadas.</p>
-                    <a href="pdf/banco-dados.pdf" class="btn-chamado" target="_blank" rel="noopener noreferrer">Ler mais</a>
+                    <a href="../pdf/banco-dados.pdf" class="btn-chamado" target="_blank" rel="noopener noreferrer">Ler mais</a>
                 </div>
 
                 <div class="card">
                     <i class="fa-solid fa-brain"></i>
                     <h3>Inteligência Artificial na Automação</h3>
                     <p>Artigo explicando como IA pode agilizar processos em empresas de e-commerce.</p>
-                    <a href="pdf/ia-automacao.pdf" class="btn-chamado" target="_blank" rel="noopener noreferrer">Ver artigo</a>
+                    <a href="../pdf/ia.pdf" class="btn-chamado" target="_blank" rel="noopener noreferrer">Ver artigo</a>
                 </div>
 
                 <div class="card">
                     <i class="fa-solid fa-chart-line"></i>
                     <h3>Relatórios e Power BI</h3>
                     <p>Guia prático sobre criação de dashboards interativos e análise de dados.</p>
-                    <a href="pdf/power-bi.pdf" class="btn-chamado" target="_blank" rel="noopener noreferrer">Baixar PDF</a>
+                    <a href="../pdf/power-bi.pdf" class="btn-chamado" target="_blank" rel="noopener noreferrer">Baixar PDF</a>
                 </div>
 
                 <div class="card">
                     <i class="fa-solid fa-network-wired"></i>
                     <h3>Infraestrutura e Redes</h3>
                     <p>Documentação técnica sobre servidores, protocolos e segurança de rede.</p>
-                    <a href="pdf/infra-redes.pdf" class="btn-chamado" target="_blank" rel="noopener noreferrer">Ver mais</a>
+                    <a href="../pdf/redes.pdf" class="btn-chamado" target="_blank" rel="noopener noreferrer">Ver mais</a>
                 </div>
             </div>
         </main>
