--- a/FrontChama/html/chamados.html
+++ b/FrontChama/html/chamados.html
@@ -172,7 +172,7 @@
             <h2 class="text-lg font-semibold mb-4 text-gray-800">Tem certeza que deseja sair?</h2>
             <div class="flex justify-center gap-4">
                 <button id="btnConfirmarSair" class="bg-red-600 text-white px-4 py-2 rounded-lg hover:bg-red-700 transition">Sair</button>
-                <button id="btnCancelarSair" class="bg-gray-200 text-gray-800 px-4 py-2 rounded-lg hover:bg-gray-300 transition">Cancelar</button>
+                <button id="btnCancelarSair" class="bg-gray-500 text-white px-4 py-2 rounded-lg hover:bg-gray-500 transition">Cancelar</button>
             </div>
         </div>
     </div>
