--- a/FrontChama/html/perfil.html
+++ b/FrontChama/html/perfil.html
@@ -1,251 +1,183 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Perfil do Usuário</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Perfil do Usuário</title>
 
-    <!-- Ícone do site -->
-    <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
+<!-- Ícone do site -->
+<link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
 
-    <!-- Fontes e ícones externos -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<!-- Fontes e ícones externos -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <!-- CSS local do perfil -->
-    <link rel="stylesheet" href="../css/perfil.css" />
-
-    <!-- Tailwind CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
+<!-- CSS local do perfil -->
+<link rel="stylesheet" href="../css/perfil.css" />
 </head>
 <body>
 
-    <!-- Cabeçalho principal -->
-    <header class="site-header">
-        <div class="header-inner">
-            <div class="brand">
-                <div class="logo-wrapper">
-                    <img src="../assets/logo.png" alt="Logo Chama Fácil" class="brand-logo">
-                </div>
-                <span class="brand-title">Chama Fácil</span>
+<header class="site-header">
+    <div class="header-inner">
+        <div class="brand">
+            <div class="logo-wrapper">
+                <img src="../assets/logo.png" alt="Logo Chama Fácil" class="brand-logo">
             </div>
-            <nav class="main-nav" aria-label="Menu principal">
-                <a class="nav-link active" href="faq.html">Central de Soluções</a>
-                <a class="nav-link" href="artigos.html">Artigos & Documentos</a>
-            </nav>
-            <div class="profile-area" title="Perfil">
-                <i class="fa-solid fa-user-circle"></i>
-            </div>
+            <span class="brand-title">Chama Fácil</span>
         </div>
-    </header>
-
-    <!-- Estrutura principal da página -->
-    <div class="layout">
-        <!-- Barra lateral de navegação -->
-        <aside class="sidebar">
-            <ul>
-                <li><a href="atividades.html"><i class="fa-solid fa-list-check"></i> Minhas Atividades</a></li>
-                <li><a href="chamados.html"><i class="fa-solid fa-headset"></i> Chamados</a></li>
-                <li class="active"><a href="perfil.html"><i class="fa-solid fa-user"></i> Perfil</a></li>
-                <li><a href="#" onclick="abrirModalSaida()"><i class="fa-solid fa-clipboard-list"></i> Sair</a></li>
-            </ul>
-        </aside>
-
-        <!-- Conteúdo principal -->
-        <main class="page">
-            <h1 class="hero-title">Meu Perfil</h1>
-
-            <section class="perfil-card">
-                <div class="foto-perfil">
-                    <i class="fa-solid fa-user"></i>
-                </div>
-
-                <form class="perfil-form">
-                    <label>Nome Completo:</label>
-                    <input type="text" disabled>
-
-                    <label>E-mail:</label>
-                    <input type="email">
-
-                    <label>Senha Atual:</label>
-                    <input type="password" placeholder="Digite sua senha atual">
-
-                    <label>Nova Senha:</label>
-                    <input type="password" placeholder="Digite sua nova senha">
-
-                    <label>Confirme a Nova Senha:</label>
-                    <input type="password" placeholder="Confirme sua nova senha">
-
-                    <button type="submit" class="btn-chamado">Salvar Alterações</button>
-                </form>
-            </section>
-
-            <button id="chatToggle" class="fixed bottom-6 right-6 bg-[#3B82F6] text-white rounded-full w-14 h-14 flex items-center justify-center shadow-lg hover:bg-[#1E40AF] transition z-50">💬</button>
-
-            <div id="chatModal" class="hidden fixed bottom-20 right-6 w-[380px] max-w-[90%] bg-white rounded-2xl shadow-xl flex flex-col overflow-hidden border border-gray-200 z-50">
-                <header class="flex items-center justify-between bg-[#2F374C] text-white p-3">
-                    <div class="flex items-center gap-3">
-                        <img src="../assets/zehelp.png" class="w-9 h-9 rounded-full bg-white p-1" alt="Zé Help">
-                        <div>
-                            <h1 class="text-sm font-semibold leading-none">Zé Help</h1>
-                            <p class="text-xs opacity-80">Ajudante do Chama Fácil</p>
-                        </div>
-                    </div>
-                    <button id="closeChat" class="text-lg font-bold hover:text-red-400 transition">×</button>
-                </header>
-
-                <main id="chatBox" class="flex-1 p-3 overflow-y-auto bg-gray-50 space-y-3">
-                    <div class="msg flex items-end gap-2">
-                        <img src="../assets/zehelp.png" class="w-7 h-7 rounded-full" alt="Zé Help">
-                        <div class="bg-[#3B82F6] text-white px-3 py-2 rounded-2xl max-w-[75%] text-sm">
-                            Oi! Sou o Zé Help 😄 Como posso te ajudar hoje?
-                        </div>
-                    </div>
-                </main>
-
-                <div class="flex items-center gap-2 border-t border-gray-200 p-2 bg-white">
-                    <input id="userInput" type="text" placeholder="Digite sua mensagem..." class="flex-1 border border-gray-300 rounded-full px-3 py-1.5 text-sm focus:outline-none focus:ring-2 focus:ring-[#3B82F6]">
-                    <button id="sendBtn" class="bg-[#3B82F6] text-white px-4 py-1.5 rounded-full text-sm hover:bg-[#1E40AF] transition">Enviar</button>
-                </div>
-            </div>
-
-            <div id="modalConfirm" class="modal">
-                <div class="modal-content text-center">
-                    <h2 class="text-lg font-semibold mb-4 text-gray-800">Tem certeza que deseja sair?</h2>
-                    <div class="flex justify-center gap-4">
-                        <button id="btnConfirmarSair" class="bg-[var(--error)] text-white px-4 py-2 rounded-lg hover:bg-red-600 transition">Sair</button>
-                        <button id="btnCancelarSair" class="bg-gray-200 text-gray-800 px-4 py-2 rounded-lg hover:bg-gray-300 transition">Cancelar</button>
-                    </div>
-                </div>
-            </div>
-
-            <footer class="site-footer">
-                <div>© 2025 Chama Fácil — suporte: chamafacil@outlook.com</div>
-            </footer>
-        </main>
+        <nav class="main-nav" aria-label="Menu principal">
+            <a class="nav-link active" href="faq.html">Central de Soluções</a>
+            <a class="nav-link" href="artigos.html">Artigos & Documentos</a>
+        </nav>
+        <div class="profile-area" title="Perfil">
+            <i class="fa-solid fa-user-circle"></i>
+        </div>
     </div>
+</header>
 
-    <!-- SCRIPT PRINCIPAL DA PÁGINA -->
-    <script>
+<div class="layout">
+    <aside class="sidebar">
+        <ul>
+            <li><a href="atividades.html"><i class="fa-solid fa-list-check"></i> Minhas Atividades</a></li>
+            <li><a href="chamados.html"><i class="fa-solid fa-headset"></i> Chamados</a></li>
+            <li class="active"><a href="perfil.html"><i class="fa-solid fa-user"></i> Perfil</a></li>
+            <li><a href="#" onclick="abrirModalSaida()"><i class="fa-solid fa-clipboard-list"></i> Sair</a></li>
+        </ul>
+    </aside>
+
+    <main class="page">
+        <h1 class="hero-title">Meu Perfil</h1>
+
+        <section class="perfil-card">
+            <div class="foto-perfil">
+                <i class="fa-solid fa-user"></i>
+            </div>
+
+            <form class="perfil-form">
+                <label>Nome Completo:</label>
+                <input type="text" disabled>
+
+                <label>E-mail:</label>
+                <input type="email" disabled>
+
+                <label>Funcional:</label>
+                <input type="text" placeholder="Digite seu funcional">
+
+                <label>Nova Senha:</label>
+                <input type="password" placeholder="Digite sua nova senha">
+
+                <label>Confirme a Nova Senha:</label>
+                <input type="password" placeholder="Confirme sua nova senha">
+
+                <button type="submit" class="btn-chamado">Salvar Alterações</button>
+            </form>
+        </section>
+
+        <footer class="site-footer">
+            <div>© 2025 Chama Fácil — suporte: chamafacil@outlook.com</div>
+        </footer>
+    </main>
+</div>
+
+<!-- Modal de saída customizado -->
+<div id="modalConfirm" class="modal">
+    <div class="modal-content text-center">
+        <h2 class="text-lg font-semibold mb-4 text-gray-800">Tem certeza que deseja sair?</h2>
+        <div class="flex justify-center gap-4">
+            <button id="btnConfirmarSair" class="bg-red-600 text-white px-4 py-2 rounded-lg hover:bg-red-700 transition">Sair</button>
+            <button id="btnCancelarSair" class="bg-gray-200 text-gray-800 px-4 py-2 rounded-lg hover:bg-gray-300 transition">Cancelar</button>
+        </div>
+    </div>
+</div>
+
+<script>
+document.addEventListener('DOMContentLoaded', () => {
     const form = document.querySelector('.perfil-form');
-    const chatToggle = document.getElementById('chatToggle');
-    const chatModal = document.getElementById('chatModal');
-    const closeChat = document.getElementById('closeChat');
-    const chatBox = document.getElementById('chatBox');
-    const userInput = document.getElementById('userInput');
-    const sendBtn = document.getElementById('sendBtn');
+    const usuario = JSON.parse(sessionStorage.getItem('usuarioLogado'));
+
+    if (!usuario) {
+        alert('Sessão expirada. Faça login novamente.');
+        window.location.href = '../html/home.html';
+        return;
+    }
+
+    const nomeInput = form.querySelector('input[type="text"]');
+    const emailInput = form.querySelector('input[type="email"]');
+    const funcionalInput = form.querySelector('input[placeholder="Digite seu funcional"]');
+    const novaSenhaInput = form.querySelector('input[placeholder="Digite sua nova senha"]');
+    const confirmaSenhaInput = form.querySelector('input[placeholder="Confirme sua nova senha"]');
+
+    nomeInput.value = usuario.nome_usuario || 'Usuário';
+    emailInput.value = usuario.email || '';
+    funcionalInput.value = '';
+
+    form.addEventListener('submit', async e => {
+        e.preventDefault();
+
+        if (!funcionalInput.value.trim()) {
+            alert('Informe seu funcional.');
+            return;
+        }
+
+        if (novaSenhaInput.value.trim() !== confirmaSenhaInput.value.trim()) {
+            alert('A nova senha e a confirmação não coincidem.');
+            return;
+        }
+
+        const payload = {
+            Nome_usuario: usuario.nome_usuario,
+            Funcional: funcionalInput.value.trim(),
+            Senha: novaSenhaInput.value.trim(),
+            Tipo_usuario: usuario.tipo_usuario,
+            Id_setor: usuario.id_setor
+        };
+
+        try {
+            const response = await fetch(`https://localhost:7271/api/v1/Usuario/${usuario.id_usuario}`, {
+                method: 'PUT',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(payload)
+            });
+
+            if (response.ok) {
+                alert('Senha alterada com sucesso!');
+                usuario.senha = novaSenhaInput.value.trim();
+                usuario.funcional = funcionalInput.value.trim();
+                sessionStorage.setItem('usuarioLogado', JSON.stringify(usuario));
+                novaSenhaInput.value = '';
+                confirmaSenhaInput.value = '';
+                funcionalInput.value = '';
+            } else {
+                const error = await response.text();
+                alert('Erro ao alterar senha: ' + error);
+            }
+        } catch (err) {
+            console.error(err);
+            alert('Erro ao conectar com o servidor.');
+        }
+    });
+
+    // Modal de saída
     const modalConfirm = document.getElementById('modalConfirm');
     const btnConfirmarSair = document.getElementById('btnConfirmarSair');
     const btnCancelarSair = document.getElementById('btnCancelarSair');
 
-    document.addEventListener('DOMContentLoaded', () => {
-        // Pega os dados do sessionStorage
-        const usuarioLogado = JSON.parse(sessionStorage.getItem('usuarioLogado'));
-        const tecnicoLogado = JSON.parse(sessionStorage.getItem('tecnicoLogado'));
-
-        const perfilAtivo = tecnicoLogado || usuarioLogado;
-
-        if (!perfilAtivo) {
-            alert('Sessão expirada. Faça login novamente.');
-            window.location.href = '../html/home.html';
-            return;
-        }
-
-        // Seleciona os inputs do formulário
-        const nomeInput = document.querySelector('.perfil-form input[type="text"]');
-        const emailInput = document.querySelector('.perfil-form input[type="email"]');
-
-        // Preenche os dados do perfil com fallback correto
-        nomeInput.value = perfilAtivo.nome || perfilAtivo.nome_usuario || perfilAtivo.nome_tecnico || 'Usuário';
-        emailInput.value = perfilAtivo.email || perfilAtivo.email_usuario || perfilAtivo.email_tecnico || '';
-    });
-
-    form.addEventListener('submit', e => {
-        e.preventDefault();
-        alert('Alterações salvas com sucesso!');
-    });
-
-    chatToggle.addEventListener('click', () => chatModal.classList.toggle('hidden'));
-    closeChat.addEventListener('click', () => chatModal.classList.add('hidden'));
-
-    function addMessage(text, sender) {
-        const msg = document.createElement('div');
-        msg.className = 'msg flex items-end gap-2';
-        msg.innerHTML = sender === 'user'
-            ? `<div class='ml-auto bg-gray-200 text-gray-800 px-3 py-2 rounded-2xl max-w-[75%] text-sm'>${text}</div>`
-            : `<img src='../assets/zehelp.png' class='w-7 h-7 rounded-full'>
-               <div class='bg-[#3B82F6] text-white px-3 py-2 rounded-2xl max-w-[75%] text-sm'>${text}</div>`;
-        chatBox.appendChild(msg);
-        chatBox.scrollTop = chatBox.scrollHeight;
-    }
-
-    function showTypingIndicator() {
-        const typingDiv = document.createElement('div');
-        typingDiv.id = 'typingIndicator';
-        typingDiv.className = 'msg flex items-end gap-2';
-        typingDiv.innerHTML = `
-            <img src='../assets/zehelp.png' class='w-7 h-7 rounded-full'>
-            <div class='bg-[#3B82F6] text-white px-3 py-2 rounded-2xl text-sm'>digitando...</div>`;
-        chatBox.appendChild(typingDiv);
-        chatBox.scrollTop = chatBox.scrollHeight;
-    }
-
-    function removeTypingIndicator() {
-        const typingDiv = document.getElementById('typingIndicator');
-        if (typingDiv) typingDiv.remove();
-    }
-
-    sendBtn.addEventListener('click', () => {
-        const text = userInput.value.trim();
-        if (!text || sendBtn.disabled) return;
-
-        addMessage(text, 'user');
-        userInput.value = '';
-        sendBtn.disabled = true;
-        userInput.disabled = true;
-        showTypingIndicator();
-
-        fetch('https://localhost:7271/api/ia/chat', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ message: text, sessionId: 'usuario-chat' })
-        })
-        .then(res => res.json())
-        .then(data => {
-            removeTypingIndicator();
-            addMessage(data.response || 'Desculpe, não entendi sua mensagem.', 'bot');
-        })
-        .catch(() => {
-            removeTypingIndicator();
-            addMessage('Ops! Algo deu errado ao falar com o assistente. 😢', 'bot');
-        })
-        .finally(() => {
-            sendBtn.disabled = false;
-            userInput.disabled = false;
-            userInput.focus();
-        });
-    });
-
-    userInput.addEventListener('keypress', e => {
-        if (e.key === 'Enter') sendBtn.click();
-    });
-
-    function abrirModalSaida() {
+    window.abrirModalSaida = () => {
         modalConfirm.style.display = 'flex';
-    }
+    };
 
-    function fecharModalSaida() {
+    const fecharModalSaida = () => {
         modalConfirm.style.display = 'none';
-    }
+    };
 
     btnConfirmarSair.addEventListener('click', () => {
         sessionStorage.removeItem('usuarioLogado');
-        sessionStorage.removeItem('tecnicoLogado');
         window.location.href = '../html/home.html';
     });
 
     btnCancelarSair.addEventListener('click', fecharModalSaida);
-    window.addEventListener('click', e => { if (e.target === modalConfirm) fecharModalSaida(); });
-    </script>
+});
+</script>
+
 </body>
 </html>
