--- a/FrontChama/html/tec_faq.html
+++ b/FrontChama/html/tec_faq.html
@@ -37,7 +37,7 @@
             </nav>
 
             <div class="profile-area" title="Perfil">
-                <a href="perfil.html"><i class="fa-solid fa-user-circle"></i></a>
+                <a href="tec_perfil.html"><i class="fa-solid fa-user-circle"></i></a>
             </div>
         </div>
     </header>
@@ -46,9 +46,8 @@
         <!-- SIDEBAR -->
         <aside class="sidebar">
             <ul>
-                <li><a href="atividades.html"><i class="fa-solid fa-list-check"></i> Minhas Atividades</a></li>
-                <li><a href="chamados.html"><i class="fa-solid fa-headset"></i> Chamados</a></li>
-                <li><a href="perfil.html"><i class="fa-solid fa-user"></i> Perfil</a></li>
+                <li><a href="tec_faq.html"><i class="fa-solid fa-headset"></i> Central de Chamados</a></li>
+                <li><a href="tec_perfil.html"><i class="fa-solid fa-user"></i> Perfil</a></li>
                 <li>
                     <a href="#" id="btnSair">
                         <i class="fa-solid fa-clipboard-list"></i> Sair
@@ -142,8 +141,8 @@
         <div class="modalSair-content text-center">
             <h2 class="text-lg font-semibold mb-4 text-gray-800">Tem certeza que deseja sair?</h2>
             <div class="flex justify-center gap-4">
-                <button id="btnConfirmarSair" class="bg-[var(--error)] text-white px-4 py-2 rounded-lg hover:bg-red-600 transition">Sair</button>
-                <button id="btnCancelarSair" class="bg-gray-200 text-gray-800 px-4 py-2 rounded-lg hover:bg-gray-300 transition">Cancelar</button>
+                <button id="btnConfirmarSair" class="bg-red-600 text-white px-4 py-2 rounded-lg hover:bg-red-700 transition">Sair</button>
+                <button id="btnCancelarSair" class="bg-gray-500 text-white px-4 py-2 rounded-lg hover:bg-gray-500 transition">Cancelar</button>
             </div>
         </div>
     </div>
