--- a/FrontChama/html/tec_perfil.html
+++ b/FrontChama/html/tec_perfil.html
@@ -1,257 +1,207 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Perfil do Técnico</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Perfil do Técnico</title>
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
+<!-- Favicon -->
+<link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
 
-    <!-- Fonts e Ícones -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<!-- Fonts e Ícones -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <!-- CSS local -->
-    <link rel="stylesheet" href="../css/tec_perfil.css" />
-
-    <script src="https://cdn.tailwindcss.com"></script>
+<!-- CSS local -->
+<link rel="stylesheet" href="../css/tec_perfil.css" />
+<script src="https://cdn.tailwindcss.com"></script>
 </head>
-
 <body>
 
-    <!-- Header -->
-    <header class="site-header">
-        <div class="header-inner">
-            <div class="brand">
-                <div class="logo-wrapper">
-                    <img src="../assets/logo.png" alt="Logo Chama Fácil" class="brand-logo">
-                </div>
-                <span class="brand-title">Chama Fácil</span>
+<header class="site-header">
+    <div class="header-inner">
+        <div class="brand">
+            <div class="logo-wrapper">
+                <img src="../assets/logo.png" alt="Logo Chama Fácil" class="brand-logo">
             </div>
-
-            <nav class="main-nav" aria-label="Menu principal">
-                <a class="nav-link" href="tec_central.html">Central de Soluções</a>
-                <a class="nav-link" href="tec_faq.html">FAQ</a>
-                <a class="nav-link" href="tec_artigos.html">Artigos</a>
-                <a class="nav-link" href="tec_documentos.html">Documentos</a>
-            </nav>
-
-            <div class="profile-area" title="Perfil">
-                <i class="fa-solid fa-user-gear"></i>
-            </div>
+            <span class="brand-title">Chama Fácil</span>
         </div>
-    </header>
-
-    <div class="layout">
-        <aside class="sidebar">
-            <ul>
-                <li><i class="fa-solid fa-list-check"></i> Minhas Atividades</li>
-                <li><i class="fa-solid fa-clipboard-list"></i> Solicitações</li>
-                <li><i class="fa-solid fa-headset"></i> Chamados</li>
-                <li class="active"><i class="fa-solid fa-user-gear"></i> Perfil</li>
-                <li>
-                    <a href="#" onclick="abrirModalSaida()">
-                        <i class="fa-solid fa-clipboard-list"></i> Sair
-                    </a>
-                </li>
-            </ul>
-        </aside>
-
-        <main class="page">
-            <h1 class="hero-title">Perfil Técnico</h1>
-
-            <section class="perfil-card">
-                <img src="../assets/tecnico.png" alt="Foto do técnico" class="foto-perfil">
-
-                <form class="perfil-form">
-                    <label>Nome Completo:</label>
-                    <input type="text" value="Carlos Andrade" disabled>
-
-                    <label>E-mail:</label>
-                    <input type="email" value="carlos.andrade@chamafacil.com">
-
-                    <label>Especialidade:</label>
-                    <input type="text" value="Suporte em Hardware e Redes">
-
-                    <label>Status Atual:</label>
-                    <select>
-                        <option>Disponível</option>
-                        <option>Em atendimento</option>
-                        <option>Ausente</option>
-                    </select>
-
-                    <label>Alterar Senha:</label>
-                    <input type="password" placeholder="Nova senha">
-
-                    <button type="submit" class="btn-chamado">Salvar Alterações</button>
-                </form>
-            </section>
-        </main>
-    </div>
-
-    <!-- botão flutuante -->
-    <button id="chatToggle" class="fixed bottom-6 right-6 bg-[#3B82F6] text-white rounded-full w-14 h-14 flex items-center justify-center shadow-lg hover:bg-[#1E40AF] transition z-50">
-        💬
-    </button>
-
-    <!-- modal do chat -->
-    <div id="chatModal" class="hidden fixed bottom-20 right-6 w-[380px] max-w-[90%] bg-white rounded-2xl shadow-xl flex flex-col overflow-hidden border border-gray-200 z-50">
-        <!-- header -->
-        <header class="flex items-center justify-between bg-[#2F374C] text-white p-3">
-            <div class="flex items-center gap-3">
-                <img src="../assets/zehelp.png" class="w-9 h-9 rounded-full bg-white p-1" alt="Zé Help">
-                <div>
-                    <h1 class="text-sm font-semibold leading-none">Zé Help</h1>
-                    <p class="text-xs opacity-80">Ajudante do Chama Fácil</p>
-                </div>
-            </div>
-            <button id="closeChat" class="text-lg font-bold hover:text-red-400 transition">×</button>
-        </header>
-
-        <!-- mensagens -->
-        <main id="chatBox" class="flex-1 p-3 overflow-y-auto bg-gray-50 space-y-3">
-            <div class="msg flex items-end gap-2">
-                <img src="../assets/zehelp.png" class="w-7 h-7 rounded-full" alt="Zé Help">
-                <div class="bg-[#3B82F6] text-white px-3 py-2 rounded-2xl max-w-[75%] text-sm">
-                    Oi! Sou o Zé Help 😄 Como posso te ajudar hoje?
-                </div>
-            </div>
-        </main>
-
-        <!-- input -->
-        <div class="flex items-center gap-2 border-t border-gray-200 p-2 bg-white">
-            <input id="userInput" type="text" placeholder="Digite sua mensagem..."
-                   class="flex-1 border border-gray-300 rounded-full px-3 py-1.5 text-sm focus:outline-none focus:ring-2 focus:ring-[#3B82F6]">
-            <button id="sendBtn" class="bg-[#3B82F6] text-white px-4 py-1.5 rounded-full text-sm hover:bg-[#1E40AF] transition">Enviar</button>
+        <nav class="main-nav" aria-label="Menu principal">
+            <a class="nav-link active" href="tec_faq.html">Central de Soluções - TÉCNICO</a>
+        </nav>
+        <div class="profile-area" title="Perfil">
+            <i class="fa-solid fa-user"></i>
         </div>
     </div>
+</header>
 
-    <!-- MODAL DE CONFIRMAÇÃO DE SAÍDA -->
-    <div id="modalConfirm" class="modal">
-        <div class="modal-content text-center">
-            <h2 class="text-lg font-semibold mb-4 text-gray-800">Tem certeza que deseja sair?</h2>
-            <div class="flex justify-center gap-4">
-                <button id="btnConfirmarSair" class="bg-[var(--error)] text-white px-4 py-2 rounded-lg hover:bg-red-600 transition">Sair</button>
-                <button id="btnCancelarSair" class="bg-gray-200 text-gray-800 px-4 py-2 rounded-lg hover:bg-gray-300 transition">Cancelar</button>
+<div class="layout">
+    <aside class="sidebar">
+        <ul>
+            <li>
+                <a href="tec_faq.html">
+                    <i class="fa-solid fa-headset"></i> Central de Chamados
+                </a>
+            </li>
+            <li class="active">
+                <i class="fa-solid fa-user"></i> Perfil
+            </li>
+            <li>
+                <a href="#" onclick="abrirModalSaida()">
+                    <i class="fa-solid fa-clipboard-list"></i> Sair
+                </a>
+            </li>
+        </ul>
+    </aside>
+
+    <main class="page">
+        <h1 class="hero-title text-center">Perfil Técnico</h1>
+
+        <section class="perfil-card">
+            <div class="foto-perfil">
+                <i class="fa-solid fa-user"></i>
             </div>
+
+            <form class="perfil-form flex flex-col gap-4">
+
+                <label for="nome">Nome Completo:</label>
+                <input id="nome" type="text" disabled>
+
+                <label for="email">E-mail:</label>
+                <input id="email" type="email" disabled>
+
+                <label for="setor">Setor:</label>
+                <input id="setor" type="text" disabled>
+
+                <label for="funcional">Funcional:</label>
+                <input id="funcional" type="text" placeholder="Digite sua funcional">
+
+                <label for="senha">Nova Senha:</label>
+                <input id="senha" type="password" placeholder="Digite sua nova senha">
+
+                <label for="confirmarSenha">Confirmar Senha:</label>
+                <input id="confirmarSenha" type="password" placeholder="Confirme sua nova senha">
+
+                <button type="submit" class="btn-chamado mt-2">Salvar Alterações</button>
+            </form>
+        </section>
+    </main>
+</div>
+
+<!-- Modal de saída -->
+<div id="modalConfirm" class="modal">
+    <div class="modal-content text-center">
+        <h2 class="text-lg font-semibold mb-4 text-gray-800">Tem certeza que deseja sair?</h2>
+        <div class="flex justify-center gap-4">
+            <button id="btnConfirmarSair" class="bg-red-600 text-white px-4 py-2 rounded-lg hover:bg-red-700 transition">Sair</button>
+            <button id="btnCancelarSair" class="bg-gray-500 text-white px-4 py-2 rounded-lg hover:bg-gray-500 transition">Cancelar</button>
         </div>
     </div>
+</div>
 
+<footer class="site-footer">
+    <div>© 2025 Chama Fácil — suporte: chamafacil@outlook.com</div>
+</footer>
 
-    <footer class="site-footer">
-        <div>© 2025 Chama Fácil — suporte: chamafacil@outlook.com</div>
-    </footer>
-
-    <script>
-        const form = document.querySelector('.perfil-form');
-        const chatToggle = document.getElementById('chatToggle');
-        const chatModal = document.getElementById('chatModal');
-        const closeChat = document.getElementById('closeChat');
-        const chatBox = document.getElementById('chatBox');
-        const userInput = document.getElementById('userInput');
-        const sendBtn = document.getElementById('sendBtn');
-        const modalConfirm = document.getElementById('modalConfirm');
-        const btnConfirmarSair = document.getElementById('btnConfirmarSair');
-        const btnCancelarSair = document.getElementById('btnCancelarSair');
-
-        form.addEventListener('submit', e => {
-            e.preventDefault();
-            alert('Alterações salvas com sucesso!');
-        });
-
-        chatToggle.addEventListener('click', () => {
-            chatModal.classList.toggle('hidden');
-        });
-
-        closeChat.addEventListener('click', () => {
-            chatModal.classList.add('hidden');
-        });
-
-        function addMessage(text, sender) {
-            const msg = document.createElement('div');
-            msg.className = 'msg flex items-end gap-2';
-            msg.innerHTML = sender === 'user'
-                ? `<div class='ml-auto bg-gray-200 text-gray-800 px-3 py-2 rounded-2xl max-w-[75%] text-sm'>${text}</div>`
-                : `<img src='../assets/zehelp.png' class='w-7 h-7 rounded-full'>
-                   <div class='bg-[#3B82F6] text-white px-3 py-2 rounded-2xl max-w-[75%] text-sm'>${text}</div>`;
-            chatBox.appendChild(msg);
-            chatBox.scrollTop = chatBox.scrollHeight;
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+    // --- Recupera dados do técnico ---
+    const sessionKeys = ["tecnicoLogado", "tecnico"];
+    let tecnico = null;
+    for (const key of sessionKeys) {
+        const raw = sessionStorage.getItem(key);
+        if (raw) {
+            try { tecnico = JSON.parse(raw); break; } 
+            catch { continue; }
         }
+    }
 
-        function showTypingIndicator() {
-            const typingDiv = document.createElement('div');
-            typingDiv.id = 'typingIndicator';
-            typingDiv.className = 'msg flex items-end gap-2';
-            typingDiv.innerHTML = `
-                <img src='../assets/zehelp.png' class='w-7 h-7 rounded-full'>
-                <div class='bg-[#3B82F6] text-white px-3 py-2 rounded-2xl text-sm'>digitando...</div>`;
-            chatBox.appendChild(typingDiv);
-            chatBox.scrollTop = chatBox.scrollHeight;
+    if (!tecnico) {
+        alert("Sessão expirada. Faça login novamente.");
+        window.location.href = "home.html";
+        return;
+    }
+
+    // --- Inputs ---
+    const form = document.querySelector('.perfil-form');
+    const nomeInput = document.getElementById("nome");
+    const emailInput = document.getElementById("email");
+    const setorInput = document.getElementById("setor");
+    const funcionalInput = document.getElementById("funcional");
+    const senhaInput = document.getElementById("senha");
+    const confirmarSenhaInput = document.getElementById("confirmarSenha");
+
+    nomeInput.value = tecnico.nome_tecnico || tecnico.nome || "";
+    emailInput.value = tecnico.email_tecnico || tecnico.email || "";
+    setorInput.value = tecnico.setor || "Hardware";
+    funcionalInput.value = ""; // sempre vazio
+
+    // --- Submit ---
+    form.addEventListener("submit", async e => {
+        e.preventDefault();
+
+        const funcional = funcionalInput.value.trim();
+        const senha = senhaInput.value.trim();
+        const confirmar = confirmarSenhaInput.value.trim();
+
+        if (!funcional) { alert("Informe sua funcional."); funcionalInput.focus(); return; }
+        if (!senha || !confirmar) { alert("Preencha a nova senha e a confirmação."); return; }
+        if (senha !== confirmar) { alert("A senha e confirmação não coincidem."); return; }
+
+        const payload = {
+            Nome_tecnico: tecnico.nome_tecnico || tecnico.nome || "",
+            Funcional: funcional,
+            Senha: senha,
+            Id_setor: tecnico.id_setor || 0
+        };
+
+        try {
+            const id = tecnico.id; // ✅ usa o campo correto do sessionStorage
+            if (!id) { alert("ID do técnico não encontrado."); return; }
+
+            const res = await fetch(`https://localhost:7271/api/v1/Tecnico/${id}`, {
+                method: "PUT",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify(payload)
+            });
+
+            if (res.ok) {
+                alert("Senha alterada com sucesso!");
+                tecnico.funcional = funcional;
+                tecnico.senha = senha;
+                sessionStorage.setItem(
+                    sessionKeys.find(k => sessionStorage.getItem(k)) || "tecnicoLogado",
+                    JSON.stringify(tecnico)
+                );
+                funcionalInput.value = "";
+                senhaInput.value = "";
+                confirmarSenhaInput.value = "";
+            } else {
+                const errorText = await res.text();
+                alert("Erro ao alterar senha: " + errorText);
+            }
+        } catch (err) {
+            console.error(err);
+            alert("Erro ao conectar com o servidor.");
         }
+    });
 
-        function removeTypingIndicator() {
-            const typingDiv = document.getElementById('typingIndicator');
-            if (typingDiv) typingDiv.remove();
-        }
+    // --- Modal de saída ---
+    const modalConfirm = document.getElementById("modalConfirm");
+    const btnConfirmarSair = document.getElementById("btnConfirmarSair");
+    const btnCancelarSair = document.getElementById("btnCancelarSair");
 
-        sendBtn.addEventListener('click', () => {
-            const text = userInput.value.trim();
-            if (!text || sendBtn.disabled) return;
-            addMessage(text, 'user');
-            userInput.value = '';
-            sendBtn.disabled = true;
-            userInput.disabled = true;
+    window.abrirModalSaida = () => modalConfirm.style.display = "flex";
+    const fecharModal = () => modalConfirm.style.display = "none";
 
-            showTypingIndicator();
-
-            fetch('https://localhost:7271/api/ia/chat', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({
-                    message: text,
-                    sessionId: 'usuario-chat'
-                })
-            })
-                .then(res => res.json())
-                .then(data => {
-                    removeTypingIndicator();
-                    addMessage(data.response || 'Desculpe, não entendi sua mensagem.', 'bot');
-                })
-                .catch(() => {
-                    removeTypingIndicator();
-                    addMessage('Ops! Algo deu errado ao falar com o assistente. 😢', 'bot');
-                })
-                .finally(() => {
-                    sendBtn.disabled = false;
-                    userInput.disabled = false;
-                    userInput.focus();
-                });
-        });
-
-        userInput.addEventListener('keypress', (e) => {
-            if (e.key === 'Enter') sendBtn.click();
-        });
-
-        function abrirModalSaida() {
-            modalConfirm.style.display = 'flex';
-        }
-
-        function fecharModalSaida() {
-            modalConfirm.style.display = 'none';
-        }
-
-        btnConfirmarSair.addEventListener('click', () => {
-            window.location.href = 'home.html';
-        });
-
-        btnCancelarSair.addEventListener('click', fecharModalSaida);
-
-        // fecha se clicar fora do modal
-        window.addEventListener('click', (e) => {
-            if (e.target === modalConfirm) fecharModalSaida();
-        });
-    </script>
+    btnConfirmarSair.addEventListener("click", () => {
+        sessionStorage.removeItem("tecnicoLogado");
+        window.location.href = "home.html";
+    });
+    btnCancelarSair.addEventListener("click", fecharModal);
+    window.addEventListener("click", (e) => { if (e.target === modalConfirm) fecharModal(); });
+});
+</script>
 
 </body>
 </html>
