--- a/FrontChama/html/home.html
+++ b/FrontChama/html/home.html
@@ -187,8 +187,8 @@
         <h4 class="font-semibold mb-3">Sobre</h4>
         <ul class="space-y-2">
           <li><a href="#sobre" class="hover:underline">Quem somos?</a></li>
-          <li><a href="#" class="hover:underline">Política de Privacidade</a></li>
-          <li><a href="#" class="hover:underline">Termos de uso</a></li>
+          <li><a href="termos.html" class="hover:underline">Política de Privacidade</a></li>
+          <li><a href="termos.html" class="hover:underline">Termos de uso</a></li>
         </ul>
       </div>
       <div>
