--- a/FrontChama/html/tec_faq.html
+++ b/FrontChama/html/tec_faq.html
@@ -47,6 +47,7 @@
         <aside class="sidebar">
             <ul>
                 <li><a href="tec_faq.html"><i class="fa-solid fa-headset"></i> Central de Chamados</a></li>
+                <li class="active"><a href="relatorio.html"><i class="fa-solid fa-chart-simple"></i> Relatórios</a></li>
                 <li><a href="tec_perfil.html"><i class="fa-solid fa-user"></i> Perfil</a></li>
                 <li>
                     <a href="#" id="btnSair">
