--- a/FrontChama/html/tec_perfil.html
+++ b/FrontChama/html/tec_perfil.html
@@ -43,6 +43,7 @@
                     <i class="fa-solid fa-headset"></i> Central de Chamados
                 </a>
             </li>
+            <li class="active"><a href="relatorio.html"><i class="fa-solid fa-chart-simple"></i> Relatórios</a></li>
             <li class="active">
                 <i class="fa-solid fa-user"></i> Perfil
             </li>
