--- a/FrontChama/html/termos.html
+++ b/FrontChama/html/termos.html
@@ -1,196 +1,173 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Termos de Uso — Chama Fácil</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Termos de Uso — Chama Fácil</title>
 
-    <!-- Framework utilitário para estilização -->
-    <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- Fonte padrão do projeto -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <!-- CSS local -->
-    <link rel="stylesheet" href="../css/termos.css" />
+  <!-- CSS personalizado -->
+  <link rel="stylesheet" href="../css/termos.css" />
 </head>
 
 <body class="bg-[#EDEDED] font-[Poppins]">
 
-    <div class="page flex items-center justify-center min-h-screen p-6">
-        <div class="card shadow-xl rounded-2xl overflow-hidden w-full max-w-[1000px] bg-white flex">
+  <div class="flex items-center justify-center min-h-screen p-6">
+    <div class="shadow-xl rounded-2xl overflow-hidden w-full max-w-[1000px] bg-white flex">
 
-            <!-- Painel lateral esquerdo -->
-            <aside class="left-panel bg-[#2F374C] text-white w-[36%] p-10 flex flex-col justify-center">
-                <div class="panel-inner">
-                    <h1 class="panel-title text-3xl font-extrabold mb-2">Chama Fácil</h1>
-                    <p class="panel-text mb-6">
-                        Sistema de gestão de chamados pensado para tornar o suporte mais ágil, organizado e eficiente.
-                    </p>
+      <!-- Painel esquerdo -->
+      <aside class="bg-[#2F374C] text-white w-[36%] p-10 flex flex-col justify-center">
+        <div class="panel-inner">
+          <h1 class="text-3xl font-extrabold mb-2">Chama Fácil</h1>
+          <p class="mb-6">
+            Sistema de gestão de chamados pensado para tornar o suporte mais ágil, organizado e eficiente.
+          </p>
 
-                    <!-- Link de retorno ao cadastro -->
-                    <a href="../cadastro1.html" class="btn-ghost inline-block">Voltar ao cadastro</a>
-                </div>
-            </aside>
+          <!-- Link de navegação -->
+          <a href="home.html" class="underline hover:text-gray-200">
+            Voltar para home
+          </a>
+        </div>
+      </aside>
 
-            <!-- Painel principal -->
-            <main class="right-panel p-8 w-[64%] relative">
+      <!-- Painel direito -->
+      <main class="p-8 w-[64%] relative">
 
-                <!-- Botão para voltar ao cadastro -->
-                <button id="btnClose" class="back-btn" title="Voltar ao cadastro" aria-label="Voltar ao cadastro">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none"
-                         stroke="#2F374C" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <polyline points="15 18 9 12 15 6" />
-                    </svg>
-                </button>
+        <!-- Voltar -->
+        <a href="home.html" class="absolute left-4 top-4" title="Voltar">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none"
+               stroke="#2F374C" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <polyline points="15 18 9 12 15 6" />
+          </svg>
+        </a>
 
-                <div class="forms-wrap">
+        <div class="w-full mt-8">
 
-                    <!-- Logo principal -->
-                    <img src="../assets/logo.png" alt="Chama Fácil" class="logo mx-auto w-20 mb-2" />
+          <img src="../assets/logo.png" alt="Chama Fácil" class="mx-auto w-20 mb-2" />
+          <h2 class="text-center text-2xl font-bold">Termos de Uso</h2>
+          <p class="text-center text-sm text-gray-600 mb-6">
+            Leia atentamente antes de utilizar o Chama Fácil
+          </p>
 
-                    <!-- Cabeçalhos -->
-                    <h2 class="form-heading">Termos de Uso</h2>
-                    <p class="form-heading small text-sm mb-4">
-                        Leia atentamente antes de utilizar o Chama Fácil
-                    </p>
+          <!-- Caixa de termos -->
+          <div id="termsBox"
+               class="h-[500px] overflow-y-auto pr-4 text-justify leading-relaxed"
+               tabindex="0" role="region" aria-label="Termos de Uso">
 
-                    <!-- Área de leitura dos termos -->
-                    <div id="termsBox" class="terms-box" tabindex="0" role="region" aria-label="Termos de Uso">
+            <!-- SEU TEXTO COMPLETO AQUI -->
+            <section>
+              <h3 class="font-semibold text-lg mb-1">1. Introdução</h3>
+              <p>Estes Termos de Uso regulam o acesso e uso do sistema <strong>Chama Fácil</strong> ("Sistema"), uma plataforma de gestão de chamados destinada a organizações e usuários autorizados. Ao utilizar o Sistema, você concorda com estes termos na íntegra.</p>
+            </section>
 
-                        <!-- Conteúdo dos termos (texto institucional) -->
-                        <!-- Seções mantidas sem alterações -->
-                        <section>
-                            <h3>1. Introdução</h3>
-                            <p>Estes Termos de Uso regulam o acesso e uso do sistema...</p>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">2. Definições</h3>
+              <ul class="list-disc ml-6">
+                <li><strong>Serviço:</strong> funcionalidades oferecidas pelo Chama Fácil para registro, acompanhamento e gestão de chamados.</li>
+                <li><strong>Usuário:</strong> pessoa física ou jurídica autorizada a utilizar o Sistema.</li>
+                <li><strong>Administrador:</strong> usuário com privilégios para gerenciar contas, filas e configurações do Sistema.</li>
+              </ul>
+            </section>
 
-                        <section>
-                            <h3>2. Definições</h3>
-                            <ul>
-                                <li><strong>Serviço:</strong> funcionalidades oferecidas pelo Chama Fácil...</li>
-                                <li><strong>Usuário:</strong> pessoa física ou jurídica autorizada...</li>
-                                <li><strong>Administrador:</strong> usuário com privilégios...</li>
-                            </ul>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">3. Objeto</h3>
+              <p>O Chama Fácil fornece ferramentas para abertura, classificação, priorização, atribuição e acompanhamento de chamados técnicos e solicitações de serviço. As funcionalidades e integrações disponíveis podem variar conforme o plano ou configuração contratada.</p>
+            </section>
 
-                        <section>
-                            <h3>3. Objeto</h3>
-                            <p>O Chama Fácil fornece ferramentas para abertura...</p>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">4. Cadastro e Acesso</h3>
+              <p>O Usuário concorda em fornecer informações verdadeiras e atualizadas ao se cadastrar. O acesso ao Sistema é individual; credenciais não podem ser compartilhadas. O Usuário é responsável por manter a confidencialidade de senhas e por todas as atividades realizadas com sua conta.</p>
+            </section>
 
-                        <section>
-                            <h3>4. Cadastro e Acesso</h3>
-                            <p>O Usuário concorda em fornecer informações verdadeiras...</p>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">5. Uso Aceitável</h3>
+              <p>É proibido usar o Sistema para fins ilícitos, envio de spam, tentativas de invasão, disseminação de malware, violação de direitos de terceiros ou qualquer comportamento que prejudique a operação da plataforma ou de outros usuários.</p>
+            </section>
 
-                        <section>
-                            <h3>5. Uso Aceitável</h3>
-                            <p>É proibido usar o Sistema para fins ilícitos...</p>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">6. Privacidade e Proteção de Dados</h3>
+              <p>As informações coletadas no processo de cadastro e pelo uso do Sistema serão tratadas conforme nossa <strong>Política de Privacidade</strong>...</p>
+            </section>
 
-                        <section>
-                            <h3>6. Privacidade e Proteção de Dados</h3>
-                            <p>As informações coletadas serão tratadas conforme a Política de Privacidade...</p>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">7. Propriedade Intelectual</h3>
+              <p>Todos os direitos de propriedade intelectual relacionados ao Sistema...</p>
+            </section>
 
-                        <section>
-                            <h3>7. Propriedade Intelectual</h3>
-                            <p>Todos os direitos de propriedade intelectual relacionados ao Sistema...</p>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">8. Limitação de Responsabilidade</h3>
+              <p>Na máxima extensão permitida por lei, o Chama Fácil não será responsável por danos indiretos...</p>
+            </section>
 
-                        <section>
-                            <h3>8. Limitação de Responsabilidade</h3>
-                            <p>Na máxima extensão permitida por lei, o Chama Fácil não será responsável...</p>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">9. Disponibilidade e Manutenção</h3>
+              <p>O fornecedor se esforçará para manter o Sistema disponível...</p>
+            </section>
 
-                        <section>
-                            <h3>9. Disponibilidade e Manutenção</h3>
-                            <p>O fornecedor se esforçará para manter o Sistema disponível...</p>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">10. Atualizações e Alterações nos Termos</h3>
+              <p>Estes Termos podem ser atualizados periodicamente...</p>
+            </section>
 
-                        <section>
-                            <h3>10. Atualizações e Alterações nos Termos</h3>
-                            <p>Estes Termos podem ser atualizados periodicamente...</p>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">11. Rescisão</h3>
+              <p>O descumprimento destes Termos poderá resultar em suspensão...</p>
+            </section>
 
-                        <section>
-                            <h3>11. Rescisão</h3>
-                            <p>O descumprimento destes Termos poderá resultar em suspensão...</p>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">12. Integração com Terceiros</h3>
+              <p>O Sistema pode integrar-se a serviços de terceiros...</p>
+            </section>
 
-                        <section>
-                            <h3>12. Integração com Terceiros</h3>
-                            <p>O Sistema pode integrar-se a serviços de terceiros...</p>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">13. Obrigações do Usuário</h3>
+              <ul class="list-disc ml-6">
+                <li>Fornecer dados verdadeiros...</li>
+                <li>Utilizar o Sistema conforme sua finalidade...</li>
+                <li>Comunicar imediatamente qualquer uso indevido...</li>
+              </ul>
+            </section>
 
-                        <section>
-                            <h3>13. Obrigações do Usuário</h3>
-                            <ul>
-                                <li>Fornecer dados verdadeiros...</li>
-                                <li>Utilizar o Sistema conforme sua finalidade...</li>
-                                <li>Comunicar uso indevido...</li>
-                            </ul>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">14. Comunicações</h3>
+              <p>Todas as comunicações entre as partes podem ser feitas por e-mail cadastrado...</p>
+            </section>
 
-                        <section>
-                            <h3>14. Comunicações</h3>
-                            <p>As comunicações podem ser feitas por e-mail cadastrado...</p>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">15. Legislação e Foro</h3>
+              <p>Estes Termos serão regidos pela legislação brasileira...</p>
+            </section>
 
-                        <section>
-                            <h3>15. Legislação e Foro</h3>
-                            <p>Estes Termos serão regidos pela legislação brasileira...</p>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">16. Disposições Gerais</h3>
+              <p>Se qualquer disposição destes Termos for considerada inválida...</p>
+            </section>
 
-                        <section>
-                            <h3>16. Disposições Gerais</h3>
-                            <p>Se qualquer disposição for inválida, as demais permanecem vigentes...</p>
-                        </section>
+            <section>
+              <h3 class="font-semibold text-lg mt-4 mb-1">17. Contato</h3>
+              <p>Em caso de dúvidas, envie um e-mail para 
+                <a href="mailto:suporte@chamafacil.com.br" class="text-[#2F374C] underline">
+                  suporte@chamafacil.com.br
+                </a>.
+              </p>
+            </section>
 
-                        <section>
-                            <h3>17. Contato</h3>
-                            <p>Em caso de dúvidas, contate suporte@chamafacil.com.br</p>
-                        </section>
+            <footer class="mt-6 text-sm text-gray-500">
+              Data de vigência: <strong>01 de Janeiro de 2025</strong>
+            </footer>
 
-                        <footer class="terms-footer">
-                            <p>Data de vigência: <strong>01 de Janeiro de 2025</strong></p>
-                        </footer>
-
-                    </div>
-
-                    <!-- Área de ações -->
-                    <div class="mt-6 w-full flex flex-col items-center">
-
-                        <!-- Aceite dos termos -->
-                        <label class="flex items-center text-sm text-[#2F374C] mb-3">
-                            <input id="agreeCheckbox" type="checkbox" class="mr-2 accent-[#2F374C]" />
-                            Eu li e concordo com os Termos de Uso do Chama Fácil
-                        </label>
-
-                        <div class="flex gap-3">
-
-                            <!-- Botão de retorno -->
-                            <a href="cadastro1.html"
-                               class="btn-ghost border-2 border-[#2F374C] px-6 py-2 rounded-full inline-flex items-center justify-center text-[#2F374C]">
-                                Voltar
-                            </a>
-
-                            <!-- Botão de confirmação dos termos -->
-                            <button id="btnAgree" class="btn-enter px-6 py-2 rounded-full" disabled>
-                                Concordo com os Termos de Uso
-                            </button>
-
-                        </div>
-                    </div>
-
-                </div>
-            </main>
+          </div>
 
         </div>
-    </div>
 
-    <!-- Script principal -->
-    <script src="../js/termos.js"></script>
+      </main>
+    </div>
+  </div>
+
 </body>
 </html>
