--- a/FrontChama/html/relatorio.html
+++ b/FrontChama/html/relatorio.html
@@ -87,9 +87,7 @@
             <label class="font-semibold">Usuário</label>
             <select id="filtroUsuario" class="form-select mt-1">
               <option value="">Todos</option>
-              <option>João Silva</option>
-              <option>Ana Pereira</option>
-              <option>Lívia (Você)</option>
+              <!-- As opções de usuário serão populadas via JS -->
             </select>
           </div>
 
@@ -100,8 +98,8 @@
         <table class="relatorio-tabela">
           <thead>
             <tr>
-              <th>ID</th>
-              <th>Usuário</th>
+              <th>Número do Chamado</th>
+              <th>Nome</th>
               <th>Categoria</th>
               <th>Descrição</th>
               <th>Status</th>
